--- a/src/login.html
+++ b/src/login.html
@@ -194,7 +194,7 @@
                 <a href="javascript:void(0)" class="btn btn-red">Оформить подписку</a>
             </div>
 
-            <div class="sidebar__item">
+            <div class="sidebar__item sticky" data-sticky-container>
                 <div class="sidebar__border">Активный заголовок <br>
                     Активный заголовок </div>
                 <div class="sidebar__text">Длинный текст заголовка <br>
@@ -238,13 +238,6 @@
         </div>
     </div>
 </section>
-
-<div class="mobile-search">
-    <div class="close"><img src="img/close.svg" alt=""></div>
-    <div class="title">Поиск</div>
-    <input type="text" placeholder="Поиск">
-</div>
-
 
 <!-- END CONTENT  -->
 //= template/footer.html
